# ByteHub

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE.md  README.md  SECURITY.md  audit.toml  deny.toml  package.json  pnpm-lock.yaml
.agent/: agents.md
.agent/workflows/: dev.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  cla.yml  convex-deploy.yml  deploy.yml  release.yml.disabled  security.yml
convex/: projects.ts  rules.ts  schema.ts  serverConfig.ts
migrations/: 001_init.sql  002_server_config.sql  003_add_guild_id.sql
src/: config.rs  error.rs  lib.rs  main.rs
src/discord/: client.rs  commands.rs  formatters.rs  forum.rs  mod.rs  rate_limit.rs  verify.rs
src/github/: events.rs  mod.rs  verify.rs  webhook.rs
src/governance/: mod.rs  projects.rs  rules.rs  server_config.rs  whitelist.rs
src/router/: dispatch.rs
src/storage/: convex.rs  db.rs
tests/common/: common.rs
tests/discord/: interactions.rs
tests/github/: issue.rs  mod.rs  pull_request.rs  release.rs  workflow_run.rs
