[package]
name = "bytehub"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
convex = "0.10"
maplit = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
twilight-http = "0.16"
twilight-model = "0.16"
twilight-util = "0.16"
octocrab = "0.44"
crabgraph = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
thiserror = "2"
dotenvy = "0.15"
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }

[[test]]
name = "github_pull_request"
path = "tests/github/pull_request.rs"

[[test]]
name = "github_issue"
path = "tests/github/issue.rs"

[[test]]
name = "github_release"
path = "tests/github/release.rs"

[[test]]
name = "github_workflow_run"
path = "tests/github/workflow_run.rs"

[[test]]
name = "discord_interactions"
path = "tests/discord/interactions.rs"
